# alamo2radarr

./: Cargo.toml
src/: lib.rs  main.rs
