[package]
name = "alamo2radarr"
version = "0.1.0"
authors = ["Spike Grobstein <me@spike.cx>"]
edition = "2018"

[dependencies]
alamo_movies = { git = "https://github.com/spikegrobstein/alamo-movies-rust.git", branch = "fixing-all-issues" }
radarr = { git = "https://github.com/spikegrobstein/radarr-rs" }
serde_json = "1.0.87"
